--- a/client/TD3-lieux-insolites.html
+++ b/client/TD3-lieux-insolites.html
@@ -20,6 +20,13 @@
 
   <!-- Zone pour l'affichage dynamique des descriptions -->
   <div class="column"><p id="description"></p></div>
+  <div><span class="label">Continent:</span><span class="value" id="continent"></span></div>
+  <div><span class="label">Capital:</span><span class="value" id="capital"></span></div>
+  <div><span class="label">Latitude:</span><span class="value" id="latitude"></span></div>
+  <div><span class="label">Longitude:</span><span class="value" id="longitude"></span></div>
+  <div><span class="label">Read more on:</span><a id="wp" href="">wikipedia</a></div>
+ 
+ 
   </div>
 
   </div>
